# auto-etoc

./: README.md  pyproject.toml  requirements.txt
src/: auto-etoc-with-gui.py  auto-etoc.py
src/auto-etoc/: __main__.py  cli.py  scraper.py
src/auto_etoc/: __main__.py  cli.py  scraper.py
